--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/preloader.css" />
     <link rel="stylesheet" href="./styles/error.css" />
+    <link rel="stylesheet" href="./styles/index.css" />
   </head>
   <body class="page">
     <main class="content">
@@ -115,5 +116,6 @@
       </div>
     </template>
     <script src="./scripts/script.js"></script>
+  
   </body>
 </html>
