--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <!-- ТЕМПЛЕЙТЫ -->
 
     <template class="preloader-template">
-      <div class="preloader">
+      <div class="preloader visually-hidden">
         <div class="preloader-chasing-squares">
           <div class="square"></div>
           <div class="square"></div>
@@ -111,7 +111,7 @@
     </template>
 
     <template class="error-template">
-      <div class="error">
+      <div class="error visually-hidden">
         <h2 class="error__title"></h2>
       </div>
     </template>
